<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/options"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/options_bar"
        android:elevation="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/OpenFile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openFile"
            android:text="@string/open_file" />

        <View
            android:id="@+id/divider1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="#ffffff" />

        <Button
            android:id="@+id/SaveFile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveFile"
            android:text="@string/save_file" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="#ffffff" />

        <Button
            android:id="@+id/Run"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="runFile"
            android:text="@string/run" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="#ffffff" />

        <Button
            android:id="@+id/stdin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="getStdin"
            android:text="@string/enter_stdin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/options"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fileView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_background"
            android:fontFamily="@font/source_code_pro"
            android:text="[Untitled File]"
            android:textSize="18sp"
            android:textColor="@color/app_foreground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/fileDetails"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/app_background"
                android:bufferType="spannable"
                android:ems="10"
                android:fontFamily="@font/source_code_pro"
                android:gravity="top|start"
                android:hint="@string/editor_hint"
                android:inputType="textMultiLine|textNoSuggestions"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="@color/app_foreground"
                android:textColorHighlight="@color/app_selection"
                android:textColorHint="#80ffffff"
                android:textSize="16sp" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>